# augur-cpp

./: CMakeLists.txt  CSVReader.cpp  CSVReader.h  Dockerfile  Event.cpp  Event.h  License.txt  Node.cpp  Node.h  Parser.cpp  README.md  Root.cpp  Root.h  Team.cpp  Team.h  all_events.py  infile.csv  main.cpp  run-sim.sh  tvr_matches.csv  tvr_teams.csv
examples/: tvr_matches.csv  tvr_teams.csv
src/: CMakeLists.txt  Match.cpp  Team.cpp  Team.h  main.cpp
